{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 37,
  "lineage": "32c57b71-4bc5-701f-d051-7b98fd5ff453",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "chatapp-api-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:164569200858:loadbalancer/app/chatapp-api-alb/920cd8d3cb8779c8",
            "arn_suffix": "app/chatapp-api-alb/920cd8d3cb8779c8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "chatapp-api-alb-288018558.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:164569200858:loadbalancer/app/chatapp-api-alb/920cd8d3cb8779c8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chatapp-api-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b4750d7f652f1c64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02da4752ddb96f1de"
              },
              {
                "subnet_id": "subnet-03022c3e9ee1956b1"
              }
            ],
            "subnets": [
              "subnet-02da4752ddb96f1de",
              "subnet-03022c3e9ee1956b1"
            ],
            "vpc_id": "vpc-03b426c5d73474c5a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.chatapp-api-sec",
            "aws_subnet.chatapp-vpc-subnet01",
            "aws_subnet.chatapp-vpc-subnet02",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "chatapp-api-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:164569200858:listener/app/chatapp-api-alb/920cd8d3cb8779c8/9eb62d9c49930b8c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:164569200858:targetgroup/chatapp-api-targetgroup/1f37c5f2430bbeaf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:164569200858:listener/app/chatapp-api-alb/920cd8d3cb8779c8/9eb62d9c49930b8c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:164569200858:loadbalancer/app/chatapp-api-alb/920cd8d3cb8779c8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.chatapp-api-alb",
            "aws_alb_target_group.chatapp-api-targetgroup",
            "aws_security_group.chatapp-api-sec",
            "aws_subnet.chatapp-vpc-subnet01",
            "aws_subnet.chatapp-vpc-subnet02",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "chatapp-api-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:164569200858:targetgroup/chatapp-api-targetgroup/1f37c5f2430bbeaf",
            "arn_suffix": "targetgroup/chatapp-api-targetgroup/1f37c5f2430bbeaf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:164569200858:targetgroup/chatapp-api-targetgroup/1f37c5f2430bbeaf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "chatapp-api-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03b426c5d73474c5a"
          },
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chatapp-vpc-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164569200858:internet-gateway/igw-03a773adb6c0371e8",
            "id": "igw-03a773adb6c0371e8",
            "owner_id": "164569200858",
            "tags": {
              "Name": "chatapp-vpc-gateway"
            },
            "tags_all": {
              "Name": "chatapp-vpc-gateway"
            },
            "vpc_id": "vpc-03b426c5d73474c5a"
          },
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03a773adb6c0371e8",
            "id": "r-rtb-0f94fa5ea5b09bc7e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f94fa5ea5b09bc7e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.chatapp-vpc-gateway",
            "aws_route_table.chatapp-vpc-routetable",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chatapp-vpc-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164569200858:route-table/rtb-0f94fa5ea5b09bc7e",
            "id": "rtb-0f94fa5ea5b09bc7e",
            "owner_id": "164569200858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a773adb6c0371e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chatapp-vpc-routetable"
            },
            "tags_all": {
              "Name": "chatapp-vpc-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b426c5d73474c5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chatapp-vpc-rt-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7418b31fc100e88",
            "route_table_id": "rtb-0f94fa5ea5b09bc7e",
            "subnet_id": "subnet-03022c3e9ee1956b1"
          },
          "dependencies": [
            "aws_route_table.chatapp-vpc-routetable",
            "aws_subnet.chatapp-vpc-subnet01",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chatapp-vpc-rt-subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca53a6575cdc10ea",
            "route_table_id": "rtb-0f94fa5ea5b09bc7e",
            "subnet_id": "subnet-02da4752ddb96f1de"
          },
          "dependencies": [
            "aws_route_table.chatapp-vpc-routetable",
            "aws_subnet.chatapp-vpc-subnet02",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chatapp-api-sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164569200858:security-group/sg-0b4750d7f652f1c64",
            "description": "Exposes port 80 to any IPV4",
            "egress": [],
            "id": "sg-0b4750d7f652f1c64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chatapp-api-sec",
            "name_prefix": "",
            "owner_id": "164569200858",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b426c5d73474c5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chatapp-sec-db-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164569200858:security-group/sg-06dc791023469aa8b",
            "description": "Allows db connection from security group chatapp-sec-db-ingress",
            "egress": [],
            "id": "sg-06dc791023469aa8b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026c27e61afaf39b9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "chatapp-sec-db-egress",
            "name_prefix": "",
            "owner_id": "164569200858",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b426c5d73474c5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.chatapp-sec-db-ingress",
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chatapp-sec-db-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164569200858:security-group/sg-026c27e61afaf39b9",
            "description": "Allows all connections from selected security group",
            "egress": [],
            "id": "sg-026c27e61afaf39b9",
            "ingress": [],
            "name": "chatapp-sec-db-ingress",
            "name_prefix": "",
            "owner_id": "164569200858",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b426c5d73474c5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chatapp-vpc-subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164569200858:subnet/subnet-03022c3e9ee1956b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03022c3e9ee1956b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "164569200858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chatapp-vpc-subnet01"
            },
            "tags_all": {
              "Name": "chatapp-vpc-subnet01"
            },
            "vpc_id": "vpc-03b426c5d73474c5a"
          },
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chatapp-vpc-subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164569200858:subnet/subnet-02da4752ddb96f1de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02da4752ddb96f1de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "164569200858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chatapp-vpc-subnet02"
            },
            "tags_all": {
              "Name": "chatapp-vpc-subnet02"
            },
            "vpc_id": "vpc-03b426c5d73474c5a"
          },
          "dependencies": [
            "aws_vpc.chatapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chatapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164569200858:vpc/vpc-03b426c5d73474c5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e01de872dd9427b",
            "default_route_table_id": "rtb-0c0ff064c71575871",
            "default_security_group_id": "sg-0c1cd874862fd2b87",
            "dhcp_options_id": "dopt-03a441cffea577b56",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b426c5d73474c5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0ff064c71575871",
            "owner_id": "164569200858",
            "tags": {
              "Name": "chatapp-vpc"
            },
            "tags_all": {
              "Name": "chatapp-vpc"
            }
          }
        }
      ]
    }
  ]
}